deploy/k8s/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simulasitka-apex
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/issue-temporary-certificate: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - secretName: simulasitka-live-tls
      hosts:
        - simulasitka.lol
  rules:
    - host: simulasitka.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simulasitka
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simulasitka-www
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/issue-temporary-certificate: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/permanent-redirect: https://simulasitka.lol
    nginx.ingress.kubernetes.io/permanent-redirect-code: "308"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - secretName: simulasitka-www-tls
      hosts:
        - www.simulasitka.lol
  rules:
    - host: www.simulasitka.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simulasitka
                port:
                  number: 80
